# raylib_template_game

./: CMakeLists.txt
src/: asset_manager.cpp  asset_manager.h  editor.cpp  editor.h  game_context.cpp  game_context.h  game_data.h  globals.h  helpers.cpp  helpers.h  main.cpp  map.cpp  map.h  pch.h
src/entities/: components.h  entity.cpp  entity.h  entity_array.h
src/factories/: create_player.cpp  create_player.h  enemy.cpp  enemy.h  melee_attack.cpp  melee_attack.h  player.cpp  player.h  ranged_attack.cpp  ranged_attack.h
src/scenes/: game_play_scene.cpp  game_play_scene.h  main_menu_scene.cpp  main_menu_scene.h
src/serialization/: serialization_map.cpp  serialization_map.h
src/systems/: animation_system.cpp  animation_system.h  behavior_system.cpp  behavior_system.h  camera_system.cpp  camera_system.h  health_system.cpp  health_system.h  physics_system.cpp  physics_system.h  queue_free_system.cpp  queue_free_system.h  render_system.cpp  render_system.h
